--- a/manifest.json
+++ b/manifest.json
@@ -12,17 +12,17 @@
     "default_popup": "popup.html",
     "default_title": "Proxy SwitchyOmega",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/action-16.png",
+      "32": "icons/action-32.png",
+      "48": "icons/action-48.png",
+      "128": "icons/action-128.png"
     }
   },
   "options_page": "options.html",
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   }
 }
