改名、使用新的icon

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Proxy SwitchyOmega",
+    "default_title": "__MSG_extensionName__",
     "default_icon": {
       "16": "icons/action-16.png",
       "32": "icons/action-32.png",
